exports[`Components > Analysis > Regional renders a comparison correctly 1`] = `
<ul
  className="list-group">
  <li
    className="list-group-item">
    ANALYSIS 1
    <span
      className="pull-right">
      <a
        onClick={[Function]}
        title="Download GeoTIFF">
        <i
          className="fa fa-download fa-fw " />
      </a>
      <a
        ariaChecked={true}
        className="ShowOnMap active fa-btn"
        onClick={[Function]}
        role="checkbox"
        title="Toggle map display">
        <i
          className="fa fa-eye fa-fw " />
      </a>
    </span>
    <div>
      <div
        className="Select Select--single is-searchable has-value"
        style={undefined}>
        <div
          className="Select-control"
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          style={undefined}>
          <span
            className="Select-multi-value-wrapper"
            id="react-select-3--value">
            <div
              className="Select-value"
              style={undefined}
              title={undefined}>
              <span
                aria-selected="true"
                className="Select-value-label"
                id="react-select-3--value-item"
                role="option">
                ANALYSIS 2
              </span>
            </div>
          </span>
          <span
            aria-label="Clear value"
            className="Select-clear-zone"
            onMouseDown={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            title="Clear value">
            <span
              className="Select-clear"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "&times;",
                }
              } />
          </span>
          <span
            className="Select-arrow-zone"
            onMouseDown={[Function]}>
            <span
              className="Select-arrow"
              onMouseDown={[Function]} />
          </span>
        </div>
      </div>
    </div>
    <div
      className="form-group">
      <label>
        <input
          id="improvementProbabilitySlider"
          max={1}
          min={0}
          onChange={[Function]}
          step={0.01}
          type="range"
          value={0.75} />
      </label>
      <output
        for="improvementProbabilitySlider">
        Show areas with probability of improvement > 0.75
      </output>
      <a
        onClick={[Function]}
        title="Download comparison GeoTIFF">
        <i
          className="fa fa-download fa-fw " />
      </a>
    </div>
  </li>
</ul>
`;

exports[`Components > Analysis > Regional renders a comparison selection correctly 1`] = `
<ul
  className="list-group">
  <li
    className="list-group-item">
    ANALYSIS 1
    <span
      className="pull-right">
      <a
        onClick={[Function]}
        title="Download GeoTIFF">
        <i
          className="fa fa-download fa-fw " />
      </a>
      <a
        ariaChecked={true}
        className="ShowOnMap active fa-btn"
        onClick={[Function]}
        role="checkbox"
        title="Toggle map display">
        <i
          className="fa fa-eye fa-fw " />
      </a>
    </span>
    <div>
      <div
        className="Select Select--single is-searchable"
        style={undefined}>
        <div
          className="Select-control"
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          style={undefined}>
          <span
            className="Select-multi-value-wrapper"
            id="react-select-2--value">
            <div
              className="Select-placeholder">
              Select...
            </div>
          </span>
          <span
            className="Select-arrow-zone"
            onMouseDown={[Function]}>
            <span
              className="Select-arrow"
              onMouseDown={[Function]} />
          </span>
        </div>
      </div>
    </div>
  </li>
</ul>
`;

exports[`Components > Analysis > Regional renders correctly 1`] = `
<ul
  className="list-group">
  <li
    className="list-group-item">
    ANALYSIS 1
    <span
      className="pull-right">
      <a
        onClick={[Function]}
        title="Download GeoTIFF">
        <i
          className="fa fa-download fa-fw " />
      </a>
      <a
        ariaChecked={false}
        className="ShowOnMap dim fa-btn"
        onClick={[Function]}
        role="checkbox"
        title="Toggle map display">
        <i
          className="fa fa-eye-slash fa-fw " />
      </a>
    </span>
  </li>
</ul>
`;
